[package]
name = "s3ql"
version = "0.1.3"
authors = ["Julia Naomi <jnboeira@outlook.com>", "Otavio Pace <otaviopp8@gmail.com>"]
description = "Query Language for S3"
readme = "README.md"
documentation = "https://docs.rs/s3ql/"
repository = "https://github.com/naomijub/s3ql"
keywords = ["s3", "query-language", "aws"]
license = "LGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
bytes = "1"
tokio = {version = "0.2.22", features = ["full"] }
async-trait = "0.1.42"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false 
features = ["run-cargo-fmt", "run-cargo-clippy"]
